# Snake

./: CMakeLists.txt  README.md  SDL3_snake.c  SDL3_snake.h  platform_snake.c  platform_snake.h  snake.c  snake.h
